added one_hot_encode for torch.Tensor

--- a/5_Recurrent/5_1_EXE_Recurrent_Neural_Networks_Nanograd.ipynb
+++ b/5_Recurrent/5_1_EXE_Recurrent_Neural_Networks_Nanograd.ipynb
@@ -1126,11 +1126,11 @@
     "\n",
     "    # Training loss\n",
     "    Loss = \n",
-    "    train_loss.append(Loss.v)\n",
+    "    train_loss.append(Loss.v/len(encoded_training_set_y))\n",
     "        \n",
     "    # Validation loss\n",
     "    Loss_validation = \n",
-    "    val_loss.append(Loss_validation.v)\n",
+    "    val_loss.append(Loss_validation.v/len(encoded_validation_set_y))\n",
     "    \n",
     "    if e%5==0:\n",
     "        print(\"{:4d}\".format(e),\n",
@@ -1474,11 +1474,11 @@
     "\n",
     "    # Training loss\n",
     "    Loss = \n",
-    "    train_loss.append(Loss.v)\n",
+    "    train_loss.append(Loss.v/len(encoded_training_set_y))\n",
     "        \n",
     "    # Validation loss\n",
     "    Loss_validation = \n",
-    "    val_loss.append(Loss_validation.v)\n",
+    "    val_loss.append(Loss_validation.v/len(encoded_validation_set_y))\n",
     "    \n",
     "    if e%5==0:\n",
     "        print(\"{:4d}\".format(e),\n",
@@ -1569,6 +1569,60 @@
     "Define an LSTM for our recurrent neural network `MyRecurrentNet` above. A single LSTM layer is sufficient. What should the input size and hidden size be? Hint: use the PyTorch documentation.\n",
     "\n",
     "It's time for us to train our network. In the section below, you will get to put your deep learning skills to use and create your own training loop. You may want to consult previous exercises if you cannot recall how to define the training loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets redefine the one_hot_encode() and one_hot_encode_sequence() functions\n",
+    "# to work now with torch.Tensor variables instead of Var.\n",
+    "def one_hot_encode(idx, vocab_size):\n",
+    "    \"\"\"\n",
+    "    One-hot encodes a single word given its index and the size of the vocabulary.\n",
+    "    \n",
+    "    Args:\n",
+    "     `idx`: the index of the given word\n",
+    "     `vocab_size`: the size of the vocabulary\n",
+    "    \n",
+    "    Returns a 1-D numpy array of length `vocab_size`.\n",
+    "    \"\"\"\n",
+    "    # Initialize the encoded array\n",
+    "    one_hot = np.array([np.zeros(vocab_size)])\n",
+    "    \n",
+    "    # Set the appropriate element to one\n",
+    "    one_hot[0][idx] = 1.0\n",
+    "    return one_hot\n",
+    "\n",
+    "\n",
+    "def one_hot_encode_sequence(sequence, vocab_size):\n",
+    "    \"\"\"\n",
+    "    One-hot encodes a sequence of words given a fixed vocabulary size.\n",
+    "    \n",
+    "    Args:\n",
+    "     `sentence`: a list of words to encode\n",
+    "     `vocab_size`: the size of the vocabulary\n",
+    "     \n",
+    "    Returns a 3-D torch.Tensor of shape (num words, vocab size, 1).\n",
+    "    \"\"\"\n",
+    "    # Encode each word in the sentence\n",
+    "    encoding = np.array([one_hot_encode(word_to_idx[word], vocab_size) for word in sequence])\n",
+    "\n",
+    "    # Reshape encoding s.t. it has shape (num words, vocab size, 1)\n",
+    "    encoding = encoding.reshape(encoding.shape[0], encoding.shape[2], 1)\n",
+    "    return torch.Tensor(encoding)\n",
+    "\n",
+    "# lets test it\n",
+    "test_word = one_hot_encode(word_to_idx['a'], vocab_size)\n",
+    "print(f'Our one-hot encoding of \\'a\\' has shape {test_word.shape}.')\n",
+    "\n",
+    "test_sentence = one_hot_encode_sequence(['a', 'b'], vocab_size)\n",
+    "print(f'Our one-hot encoding of \\'a b\\' has shape {test_sentence.shape}.')\n",
+    "\n",
+    "print(test_word)\n",
+    "print(test_sentence)"
    ]
   },
   {
