added: changed param Bernoulli validate_args

--- a/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
+++ b/7_Unsupervised/7.2-EXE-variational-autoencoder.ipynb
@@ -560,7 +560,7 @@
     "        \"\"\"return the distribution `p(x|z)`\"\"\"\n",
     "        px_logits = self.decoder(z)\n",
     "        px_logits = px_logits.view(-1, *self.input_shape) # reshape the output\n",
-    "        return Bernoulli(logits=px_logits)\n",
+    "        return Bernoulli(logits=px_logits, validate_args=False)\n",
     "        \n",
     "\n",
     "    def forward(self, x) -> Dict[str, Any]:\n",
@@ -1054,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
