--- a/8_Reinforcement/8.3-EXE_Policy_Gradient.ipynb
+++ b/8_Reinforcement/8.3-EXE_Policy_Gradient.ipynb
@@ -1,4 +1,52 @@
-    "\n",
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.6"
+    },
+    "colab": {
+      "name": "8_3_EXE_Policy_Gradient_real.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IWy7prGN2szz"
+      },
+      "source": [
+        "# Solve cartpole with REINFORCE\n",
+        "\n",
+        "> By Jonas Busk ([jbusk@dtu.dk](mailto:jbusk@dtu.dk))\n",
+        "\n",
+        "**2019 update:** Changes have been made to the display of environments due to the previous `viewer` being incompatible with newer versions of Gym.\n",
+        "\n",
+        "In this part, we will create an agent that can learn to solve the [cartpole problem](https://gym.openai.com/envs/CartPole-v0/) from OpenAI Gym by applying a simple policy gradient method called REINFORCE.\n",
+        "In the cartpole problem, we need to balance a pole on a cart that moves along a track by applying left and right forces to the cart.\n",
+        "\n",
+        "We will implement a probabilistic policy, that given a state of the environment, $s$, outputs a probability distribution over available actions, $a$:\n",
+        "\n",
+        "$$\n",
+        "p_\\theta(a|s)\n",
+        "$$\n",
+        "\n",
         "The policy is a neural network with parameters $\\theta$ that can be trained with gradient descent.\n",
         "When the set of available actions is discrete, we can use a network with softmax output do describe the distribution.\n",
         "The core idea of training the policy network is quite simple: *we want to maximize the expected total reward by increasing the probability of good actions and decreasing the probability of bad actions*. \n",
@@ -464,3 +512,4 @@
       ]
     }
   ]
+}
