--- a/3_Feedforward_PyTorch/3.1-what-is-pytorch.ipynb
+++ b/3_Feedforward_PyTorch/3.1-what-is-pytorch.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Credits\n",
     "\n",
-    "This is heavily influenced or copied from https://github.com/pytorch/tutorials"
+    "This is heavily based on https://github.com/pytorch/tutorials"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NOTE** `torch.Size` is in fact a tuple, so it supports the same operations"
+    "**NOTE**: `torch.Size` is in fact a tuple, so it supports the same operations that a tuple supports."
    ]
   },
   {
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NOTE** Any operation that mutates a tensor in-place is post-fixed with an `_`. For example: `x.copy_(y)`, `x.t_()`, will change `x`."
+    "**NOTE**: Any operation that mutates a tensor in-place is post-fixed with an `_`. For example: `x.copy_(y)`, `x.t_()`, will change `x`."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See how the numpy array changed in value."
+    "See how the numpy array changed in value: the `numpy()` method provides a *view* of the original tensor, not a copy."
    ]
   },
   {
@@ -309,18 +309,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2. 2. 2. 2. 2.]\n",
-      "tensor([2., 2., 2., 2., 2.], dtype=torch.float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "a = np.ones(5)\n",
@@ -364,9 +355,9 @@
     "    x = x.cuda()\n",
     "    y = y.cuda()\n",
     "    z = x + y\n",
-    "    # notice that the tensors are now of type torch.cuda.FloatTensor (notice the cuda in there)\n",
-    "    # this is meant as a tensor to be run on the GPU.\n",
-    "    # the .cuda() does this to any parameter it is applied to\n",
+    "    # Notice that the tensors are now of type torch.cuda.FloatTensor (notice the cuda in there)\n",
+    "    # This is meant as a tensor to be run on the GPU.\n",
+    "    # The .cuda() does this to any parameter it is applied to.\n",
     "    print(x)\n",
     "    print(y)\n",
     "    print(z)\n",
@@ -384,7 +375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -398,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
