--- a/2_Feedforward_Python/2.2-FNN-NumPy.ipynb
+++ b/2_Feedforward_Python/2.2-FNN-NumPy.ipynb
@@ -1754,7 +1754,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1768,7 +1768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
