--- a/3_Feedforward_PyTorch/3.2-automatic-differentiation.ipynb
+++ b/3_Feedforward_PyTorch/3.2-automatic-differentiation.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[1., 1.],\n",
-      "        [1., 1.]], requires_grad=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = torch.ones(2, 2, requires_grad=True)\n",
     "print(x)"
@@ -85,18 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[3., 3.],\n",
-      "        [3., 3.]], grad_fn=<AddBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = x + 2\n",
     "print(y)"
@@ -111,17 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<AddBackward0 object at 0x7fd9b049ac50>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(y.grad_fn)"
    ]
@@ -135,19 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[27., 27.],\n",
-      "        [27., 27.]], grad_fn=<MulBackward0>)\n",
-      "tensor(27., grad_fn=<MeanBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "z = y * y * 3\n",
     "out = z.mean()\n",
@@ -177,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,18 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[4.5000, 4.5000],\n",
-      "        [4.5000, 4.5000]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x.grad)"
    ]
@@ -226,17 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([ 329.5719,  941.7422, 1180.4801], grad_fn=<MulBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = torch.randn(3, requires_grad=True)\n",
     "\n",
@@ -249,17 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([1.0240e+02, 1.0240e+03, 1.0240e-01])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gradients = torch.FloatTensor([0.1, 1.0, 0.0001])\n",
     "y.backward(gradients)\n",
@@ -302,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
