Added empty code-block for exercise f

--- a/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
+++ b/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
@@ -660,6 +660,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert code here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "p_8n_SKnIW2F"
