Changed 'len(inputs)' to 'len(single_input)' in DenseLayer

--- a/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
+++ b/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
@@ -632,7 +632,7 @@
     "            # Initialize the node value depending on its corresponding parameters.\n",
     "            node = Var(0.0) # <- Insert code\n",
     "            # We now finish the linear transformation corresponding to the parameters of the currently considered node.\n",
-    "            for i in range(len(inputs)):\n",
+    "            for i in range(len(single_input)):\n",
     "                node += Var(0.0)  # <- Insert code\n",
     "            node = self.act_fn(node)\n",
     "            out.append(node)\n",
@@ -657,15 +657,6 @@
     "* Sigmoid (or logistic function): $$\\mathrm{sigmoid}(x) = \\frac{1}{1.0 + \\exp(-x ) }$$  Hint: $\\mathrm{sigmoid}'(x)= \\mathrm{sigmoid}(x)(1-\\mathrm{sigmoid}(x))$.  \n",
     "\n",
     "Hint: You can seek inspiration in the relu method in the Var class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Insert code here"
    ]
   },
   {
