Removed two 'uncomment before sharing'

--- a/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
+++ b/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
@@ -773,9 +773,9 @@
     "x = np.linspace(-6, 6, 100)\n",
     "units = {\n",
     "    \"identity\": lambda x: x.identity(),\n",
-    "    #\"sigmoid\": lambda x: x.sigmoid(),  <- uncomment before sharing\n",
+    "    \"sigmoid\": lambda x: x.sigmoid(),\n",
     "    \"relu\": lambda x: x.relu(),\n",
-    "    #\"tanh\": lambda x: x.tanh() <- uncomment before sharing\n",
+    "    \"tanh\": lambda x: x.tanh()\n",
     "}\n",
     "\n",
     "plt.figure(figsize=(5, 5))\n",
