Renamed the exercises so that there are not two exercises  k

--- a/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
+++ b/2_Feedforward_Python/2.1-EXE-FNN-AutoDif-Nanograd.ipynb
@@ -911,7 +911,7 @@
     "id": "SrwSJ2UWFtHu"
    },
    "source": [
-    "## Exercise j) Implement cross entropy loss\n",
+    "## Exercise k) Implement cross entropy loss\n",
     "\n",
     "Insert code below to implement cross-entropy loss for general dimensionality of $t$. Use a logits formulation:\n",
     "$$\n",
@@ -1285,7 +1285,7 @@
     "id": "zTBAmjsAFtIk"
    },
    "source": [
-    "## Exercise k) Show overfitting, underfitting and just right fitting\n",
+    "## Exercise l) Show overfitting, underfitting and just right fitting\n",
     "\n",
     "Vary the architecture and other things to show clear signs of overfitting (=training loss significantly lower than test loss) and underfitting (=not fitting enoung to training data so that test performance is also hurt).\n",
     "\n",
@@ -1328,7 +1328,7 @@
     "id": "qsVPul3QFtIo"
    },
    "source": [
-    "## Exercise l) optional - Implement backpropagation for classification\n",
+    "## Exercise m) optional - Implement backpropagation for classification\n",
     "\n",
     "Should be possible with very few lines of code. :-)"
    ]
@@ -1350,7 +1350,7 @@
     "id": "APqhJv3tta1O"
    },
    "source": [
-    "## Exercise m) optional - Introduce a NeuralNetwork class\n",
+    "## Exercise n) optional - Introduce a NeuralNetwork class\n",
     "\n",
     "The functions we applied on the neural network (parameters, update_parameters and zero_gradients) can more naturally be included as methods in a NeuralNetwork class. Make such a class and modify the code to use it. "
    ]
