--- a/4_Convolutional/4.1-CNN-Introduction.ipynb
+++ b/4_Convolutional/4.1-CNN-Introduction.ipynb
@@ -8,14 +8,12 @@
    "source": [
     "# Convolutional neural networks 101\n",
     "\n",
-    "Convolution neural networks are one of the most succesful types of neural networks for image recognition and an integral part of reigniting the interest in neural networks. \n",
-    "They are able to extract structural relations in the data such as spatial in images or temporal in time series.\n",
+    "Convolution neural networks are one of the most successful types of neural networks for image recognition and an integral part of reigniting the interest in neural networks. They are able to extract structural relations in the data, such as spatial in images or temporal in time series.\n",
     "\n",
-    "In this lab we'll experiment with inserting 2D-convolution layers in the fully connected neural networks introduced previously.\n",
-    "We will also try to visualize the learned convolution filters and try to understand what kind of features they learn to recognize.\n",
+    "In this lab, we will experiment with inserting 2D-convolution layers in the fully connected neural networks introduced previously. We will also try to visualize the learned convolution filters and try to understand what kind of features they learn to recognize.\n",
     "\n",
-    "If you haven't watched Jason Yosinski's [video on visualizing convolutional networks](https://www.youtube.com/watch?v=AgkfIQ4IGaM) you definitely should do so now.\n",
-    "If you are unfamilar with the the convolution operation [github.com/vdumoulin/conv_arithmetic](https://github.com/vdumoulin/conv_arithmetic) has a nice visualization of different convolution variants.\n",
+    "If you have not watched Jason Yosinski's [video on visualizing convolutional networks](https://www.youtube.com/watch?v=AgkfIQ4IGaM), you definitely should do so now.\n",
+    "If you are unfamiliar with the convolution operation, [github.com/vdumoulin/conv_arithmetic](https://github.com/vdumoulin/conv_arithmetic) has a nice visualization of different convolution variants.\n",
     "For a more in-depth tutorial please see http://cs231n.github.io/convolutional-networks/ or http://neuralnetworksanddeeplearning.com/chap6.html."
    ]
   },
@@ -534,7 +532,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
