Corrected more minor typos in 4.1

--- a/4_Convolutional/4.1-CNN-Introduction.ipynb
+++ b/4_Convolutional/4.1-CNN-Introduction.ipynb
@@ -12,9 +12,7 @@
     "\n",
     "In this lab, we will experiment with inserting 2D-convolution layers in the fully connected neural networks introduced previously. We will also try to visualize the learned convolution filters and try to understand what kind of features they learn to recognize.\n",
     "\n",
-    "If you have not watched Jason Yosinski's [video on visualizing convolutional networks](https://www.youtube.com/watch?v=AgkfIQ4IGaM), you definitely should do so now.\n",
-    "If you are unfamiliar with the convolution operation, [github.com/vdumoulin/conv_arithmetic](https://github.com/vdumoulin/conv_arithmetic) has a nice visualization of different convolution variants.\n",
-    "For a more in-depth tutorial please see http://cs231n.github.io/convolutional-networks/ or http://neuralnetworksanddeeplearning.com/chap6.html."
+    "If you have not watched Jason Yosinski's [video on visualizing convolutional networks](https://www.youtube.com/watch?v=AgkfIQ4IGaM), you definitely should do so now. If you are unfamiliar with the convolution operation, [Vincent Dumoulin](https://github.com/vdumoulin/conv_arithmetic) has a nice visualization of different convolution variants. For a more in-depth tutorial, please see http://cs231n.github.io/convolutional-networks/ or http://neuralnetworksanddeeplearning.com/chap6.html."
    ]
   },
   {
@@ -25,30 +23,23 @@
    "source": [
     "## Reminder: what are convolutional networks?\n",
     "\n",
-    "Standard ConvNets are in many respects very similar to the dense feedforward networks we saw previously:\n",
-    " * The network is still organized into layers\n",
-    " * Each layer is parameterized by weights and biases\n",
-    " * Each layer has an element-wise non-linear transformation (activation function)\n",
-    " * There are no cycles in the connections (more on this in later labs)\n",
+    "Standard ConvNets are, in many respects, very similar to the dense feedforward networks we saw previously:\n",
+    " * The network is still organized into layers.\n",
+    " * Each layer is parameterized by weights and biases.\n",
+    " * Each layer has an element-wise non-linear transformation (activation function).\n",
+    " * There are no cycles in the connections (more on this in later labs).\n",
     "\n",
     "*So what is the difference?*\n",
-    "The networks we saw previously are called *dense* because each unit receives input from all the units in the previous layer.\n",
-    "This is not the case for ConvNets.\n",
-    "In ConvNets each unit is only connected to a small subset of the input units.\n",
-    "This is called the *receptive field* of the unit.\n",
+    "The networks we saw previously are called *dense* because each unit receives input from all the units in the previous layer. This is not the case for ConvNets. In ConvNets each unit is only connected to a small subset of the input units. This is called the *receptive field* of the unit.\n",
     "\n",
     "#### Example\n",
-    "The input (green matrix) is a tensor of size `1x5x5` -- i.e. it has one \"channel\" (like a grayscale image) and the feature map has size `5x5`.\n",
-    "Let us define a `1x3x3` kernel (yellow submatrix).\n",
-    "The kernel weights are indicated in red in the bottom right of each element.\n",
-    "The computation can be thought of as an elementwise multiplication followed by a sum.\n",
-    "Here we use a *stride* of 1, as shown in this animation:\n",
+    "The input (green matrix) is a tensor of size `1x5x5` -- i.e. it has one \"channel\" (like a grayscale image), and the feature map has size `5x5`. Let us define a `1x3x3` kernel (yellow submatrix). The kernel weights are indicated in red at the bottom right of each element. The computation can be thought of as an elementwise multiplication followed by a sum. Here we use a *stride* of 1, as shown in this animation:\n",
     "\n",
     "<img src=\"https://raw.githubusercontent.com/DeepLearningDTU/02456-deep-learning-with-PyTorch/master/4_Convolutional/images/convolutions.gif\" style=\"width: 400px;\"/>\n",
     "\n",
     "GIF courtesy of [Stanford](http://deeplearning.stanford.edu/wiki/index.php/Feature_extraction_using_convolution)\n",
     "\n",
-    "After having convolved the image we perform an elementwise non-linear transformation on the *convolved features*.\n",
+    "After having convolved the image, we perform an elementwise non-linear transformation on the *convolved features*.\n",
     "In this example, the input is a 2D *feature map* with depth 1.\n"
    ]
   },
