--- a/4_Convolutional/4.1-CNN-Introduction.ipynb
+++ b/4_Convolutional/4.1-CNN-Introduction.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "### Assignment 1.2: Output dimensionality\n",
     "\n",
-    "Given the following 3D tensor input `(channel, height, width)` , a given amount (`channels_out`) of filters `(channels_in, filter_height, filter_width)`, stride `(height, width)` and padding `(height, width)`, calculate the output dimensionality if it is valid.\n",
+    "Given the following 3D tensor input `(channel, height, width)`, a given amount (`channels_out`) of filters `(channels_in, filter_height, filter_width)`, stride `(height, width)` and padding `(height, width)`, calculate the output dimensionality if it is valid.\n",
     "\n",
     "1. input tensor with dimensionality (1, 28, 28) and 16 filters of size (1, 5, 5) with stride (1, 1) and padding (0, 0)\n",
     " * **Answer:** \n",
@@ -156,7 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "# Download the MNIST dataset, if you haven't already.\n",
+    "# Download the MNIST dataset, if you have not already.\n",
     "!if [ ! -f mnist.npz ]; then wget -N https://www.dropbox.com/s/qxywaq7nx19z72p/mnist.npz; else echo \"mnist.npz already downloaded\"; fi"
    ]
   },
