fixed image paths

--- a/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
+++ b/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
@@ -455,7 +455,7 @@
       "source": [
         "### I.c Word vectors\n",
         "\n",
-        "<img src=\"https://github.com/vlievin/transformers-lab/blob/main/images/word2vec-intuition.png?raw=1\" alt=\"Word2vec: translations in the vector spaces correspond to linguistic concepts (gender, verb tense, association between concepts)\" width=\"800px\"/>\n",
+        "<img src=\"images/word2vec-intuition.png\" alt=\"Word2vec: translations in the vector spaces correspond to linguistic concepts (gender, verb tense, association between concepts)\" width=\"800px\"/>\n",
         "\n",
         "\n",
         "Word2vec ([\"Efficient Estimation of Word Representations in Vector Space\", Mikolov et al. (2013)](https://arxiv.org/abs/1301.3781)) converts words into vector representations, which are learned using the Skip-Gram algorithm. Intuitively, The algorithm is based on the idea that words that appear together are related to each other.\n",
@@ -580,7 +580,7 @@
         "### II.a Language Modelling\n",
         "\n",
         "*Figure: Left-to-right language models*\n",
-        "![Autoregressive left-to-right language model](https://github.com/vlievin/transformers-lab/blob/main/images/ar-lm.png?raw=1)\n",
+        "![Autoregressive left-to-right language model](images/ar-lm.png)\n",
         "\n",
         "**Autoregressive factorization** Language models aim at grasping the underlying linguistic structure of a fragment of text: whereas word vectors model words independently of each others, a language model tracks the grammatical and semantic relationships between word tokens. Given a piece of text encoded into tokens $\\mathbf{w}_{1:T} = [\\mathbf{w_1}, \\ldots, \\mathbf{w}_T]$ a *left-to-right* language model describes $\\mathbf{w}_{1:T}$ with the following factorization:\n",
         "$$\n",
@@ -598,7 +598,7 @@
       },
       "source": [
         "*Figure: Categorical distribution over the possible next tokens given the context*\n",
-        "![Categorical distribution](https://github.com/vlievin/transformers-lab/blob/main/images/categorical-dist.png?raw=1)\n",
+        "![Categorical distribution](images/categorical-dist.png)\n",
         "\n",
         "**Distribution of the possible next tokens** The distribution $p_\\theta(\\mathbf{w}_t \\mid \\mathbf{w}_{<t})$ is a categorical distribution defined on the whole token vocabulary $\\mathcal{v}$. Without loss of generality, we denote $f_\\theta(\\mathbf{w}_t, \\mathbf{w}_{<t})$ the function with parameter $\\theta$ that parametrize:\n",
         "$$\n",
@@ -639,7 +639,7 @@
       },
       "source": [
         "*Figure: Bidirectional language models*\n",
-        "![Masked language model](https://github.com/vlievin/transformers-lab/blob/main/images/masked-lm.png?raw=1)\n",
+        "![Masked language model](images/masked-lm.png)\n",
         "\n",
         "**Bidirectional and masked language models** Autoregressive language models learn to predict a token $\\mathbf{w}_t$ given the context up to the step $t-1$. One can also use a [pseudo likelihood](https://en.wikipedia.org/wiki/Pseudolikelihood), where $\\mathbf{w}_t$ is not only conditioned on the preceeding tokens $\\mathbf{w}_{<t}$, but also on the next tokens $\\mathbf{w}_{>t}$. This defines a bidirectional language model, which factorizes as\n",
         "$$\n",
@@ -659,7 +659,7 @@
         "### II.b Recurrent Neural Networks\n",
         "\n",
         "*Figure: Left-to-right recurrent neural network. We highlight the information flowing from the context \"My horse is\" to the predicted word \"very\".*\n",
-        "![Recurrent Neural Network](https://github.com/vlievin/transformers-lab/blob/main/images/recurrent-lm-activated.png?raw=1)\n",
+        "![Recurrent Neural Network](images/recurrent-lm-activated.png)\n",
         "\n",
         "**Recurrent neural networks (RNNs)** implement a recursive function $f_\\theta$ using neural networks, which makes them a particularly good fit for sequential data. In the general setting, RNNs model the acquired knowledge at time $t$ using an additional variable $\\mathbf{h}_t$ of dimension $d_h$ (*hidden state*). The hidden state at step $t-1$ is updated with the information extracted from the observation $\\mathbf{w}_t$ using a function\n",
         "$$\n",
@@ -681,7 +681,7 @@
       },
       "source": [
         "*Figure: bi-directional recurrent neural network. We highlight the information flowing from the context \"My horse is\" to the predicted word \"very\" (left-to-right), and the information flowing from the context \"fast\" (right-to-left).*\n",
-        "![Recurrent Neural Network](https://github.com/vlievin/transformers-lab/blob/main/images/bidirectional-lm-activated.png?raw=1)\n",
+        "![Recurrent Neural Network](images/bidirectional-lm-activated.png)\n",
         "\n",
         "**Bi-directional recurrent neural networks** Using two RNNs running in reverse direction allows building bidirectional language models. The distribution $p_\\theta(\\mathbf{x}_t \\mid \\mathbf{x}_{-t})$ can be parameterized as\n",
         "$$\n",
@@ -1185,7 +1185,7 @@
         "$$\n",
         "\n",
         "*Figure: Word vectors vec(\"capital city\") - vec(\"country\") represented in a vector space. Vectors might point in different direction depending on their position in the vector space.*\n",
-        "![Attention analogies](https://github.com/vlievin/transformers-lab/blob/main/images/attention-analogies.png?raw=1)\n",
+        "![Attention analogies](images/attention-analogies.png)\n",
         "\n",
         "We represent the query, key and value vectors in the GloVe vector space in the above figure. The intuition is that the value vector $\\mathrm{vec}(\\text{\"capital city of a country\"})$ is not always the same depending on the country. Therefore, in this experiment, we will attempt to extract value vectors that are contextualized on the query. To do so, we will add the output of the attention (a mixture of vectors $\\mathrm{vec}(\\text{\"capital city\"}) - \\mathrm{vec}(\\text{\"country\"})$) to the vector representation of the query (a country). This corresponds to:\n",
         "\n",
@@ -1402,7 +1402,7 @@
         "### III.b Self-attention\n",
         "\n",
         "*Figure: A self-attention layers allows attending all the sequence positions*\n",
-        "![Self-attention allows attentind at all the sequence positions](https://github.com/vlievin/transformers-lab/blob/main/images/self-attention.png?raw=1)\n",
+        "![Self-attention allows attentind at all the sequence positions](images/self-attention.png)\n",
         "\n",
         "The attention mechanism is a transformation of a sequence of vectors $\\mathbf{Q}$ given all the values in the sequence $\\mathbf{V}$. In a self-attention layers, the attention layer is parameterized with transformations of the input sequence $\\mathbf{w}_{1:T}$ as parameters, which allows processing each vector in a sequence $\\mathbf{w}_{1:T}$ based on all the other locations. The output of the self-attention layer is a sequence of hidden states:\n",
         "$$\n",
@@ -1554,7 +1554,7 @@
         "----\n",
         "## IV. Transformers\n",
         "\n",
-        "<img src=\"https://github.com/vlievin/transformers-lab/blob/main/images/transformer.png?raw=1\" alt=\"Transformer architecture\" width=\"600\"/>\n",
+        "<img src=\"images/transformer.png\" alt=\"Transformer architecture\" width=\"600\"/>\n",
         "\n",
         "In this section we are going to introduce the [Transformer (\"Attention is all you need\", Vaswani (2017))](https://arxiv.org/abs/1706.03762) architecture.\n",
         "\n",
@@ -1662,8 +1662,8 @@
         "*Figure: (Left) A layer of base Transformer layer with three components: multi-head attention layer, feed-forward layer, and add & norm layer. \n",
         "(Right) Multi-head attention layer.*\n",
         "\n",
-        "<img src=\"https://github.com/vlievin/transformers-lab/blob/main/images/transformer-layer.png?raw=1\" alt=\"base Transformer layer (without conditioning)\" width=\"200\" style=\"margin-right: 100px\"/>\n",
-        "<img src=\"https://github.com/vlievin/transformers-lab/blob/main/images/multi-head-attention.png?raw=1\" alt=\"Multi-head attention\" width=\"200\"/>\n",
+        "<img src=\"images/transformer-layer.png\" alt=\"base Transformer layer (without conditioning)\" width=\"200\" style=\"margin-right: 100px\"/>\n",
+        "<img src=\"images/multi-head-attention.png\" alt=\"Multi-head attention\" width=\"200\"/>\n",
         "\n",
         "Each base layer of index $l$ takes a sequence of hidden state $\\mathbf{h}_{1:T}^l$ as input, and output another sequence $\\mathbf{h}_{1:T}^{l+1}$.\n",
         "\n",
