Removed note about environments not rendering in a Google Colab

--- a/8_Reinforcement/8.2_Prerequisites.ipynb
+++ b/8_Reinforcement/8.2_Prerequisites.ipynb
@@ -71,9 +71,7 @@
    "source": [
     "## Running an environment\n",
     "\n",
-    "Here is a bare minimum example of running a Gym environment. This creates an instance of the [CartPole-v0](https://gym.openai.com/envs/CartPole-v0) environment and runs until the rollout is done, taking random actions and rendering the environment at each step. With Gym installed, you should be able to see a small animation of the environment below.\n",
-    "\n",
-    "**Note:** you will likely not be able to render environments in a Google Colab instance. Therefore, it may be beneficial for you to run this week's notebooks locally and/or team up with another student if you do not have a local environment."
+    "Here is a bare minimum example of running a Gym environment. This creates an instance of the [CartPole-v0](https://gym.openai.com/envs/CartPole-v0) environment and runs until the rollout is done, taking random actions and rendering the environment at each step. With Gym installed, you should be able to see a small animation of the environment below."
    ]
   },
   {
