Corrected explanation of state

--- a/8_Reinforcement/8.3-EXE_Policy_Gradient.ipynb
+++ b/8_Reinforcement/8.3-EXE_Policy_Gradient.ipynb
@@ -132,7 +132,8 @@
     "id": "j8Yb5-mS2sz6"
    },
    "source": [
-    "A state in this environment is four numbers describing the position of the cart along with the angle and speed of the pole.\n",
+    "A state in this environment is four numbers describing the position and speed of the cart along with the angle and angular speed of the pole.\n",
+    "\n",
     "There are two available actions: push the cart *left* or *right* encoded as 0 and 1."
    ]
   },
