Fixed a small bug with calling next on a iterator.

--- a/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
+++ b/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "# Get random training images and show them.\n",
-    "images, labels = iter(train_loader).next()\n",
+    "images, labels = next(iter(train_loader))\n",
     "show_image(torchvision.utils.make_grid(images))"
    ]
   },
