Fixed another small bug with calling next on a iterator.

--- a/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
+++ b/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
@@ -425,7 +425,7 @@
    },
    "outputs": [],
    "source": [
-    "inputs, targets = iter(test_loader).next()\n",
+    "inputs, targets = next(iter(test_loader))\n",
     "inputs, targets = inputs.to(device), targets.to(device)\n",
     "show_image(make_grid(inputs))\n",
     "plt.show()\n",
