Corrected some formatting

--- a/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
+++ b/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
@@ -700,7 +700,7 @@
    "source": [
     "**Experiment: train your own LSTM language model**\n",
     "\n",
-    "> **NB**  *training on CPU is very slow. If you don't have access to a GPU, it will be difficult to train a model that generate acceptable samples. In the end of the notebook, we will use pre-trained models directly, so feel free to skip this experiment. **You still nee to implement the loss in the training loop**"
+    "> **NB:**  *training on CPU is very slow. If you don't have access to a GPU, it will be difficult to train a model that generate acceptable samples. In the end of the notebook, we will use pre-trained models directly, so feel free to skip this experiment.* **You still nee to implement the loss in the training loop**"
    ]
   },
   {
