Added encoding="utf8" argument for reading GloVe file to fix issue on Windows

--- a/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
+++ b/5_Transformers/5_1_EXE_deep_learning_with_transformers.ipynb
@@ -96,7 +96,7 @@
     "    # parse the vocabulary and the vectors\n",
     "    vocabulary = []\n",
     "    vectors = []\n",
-    "    with open(target_file, \"r\") as f:\n",
+    "    with open(target_file, \"r\", encoding=\"utf8\") as f:\n",
     "        for l in tqdm(f.readlines(), desc=f\"Parsing {target_file.name}...\" ):\n",
     "            word, *vector = l.split()\n",
     "            vocabulary.append(word)\n",
