--- a/7_Unsupervised/7.1-autoencoder.ipynb
+++ b/7_Unsupervised/7.1-autoencoder.ipynb
@@ -320,7 +320,7 @@
     "        continue\n",
     "\n",
     "    # live plotting of the trainig curves and representation\n",
-    "    plot_autoencoder_stats(x=x,\n",
+    "    plot_autoencoder_stats(x=x.cpu(),\n",
     "                           x_hat=x_hat,\n",
     "                           z=z,\n",
     "                           y=y,\n",
@@ -467,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
