Moved x_hat to cpu before calling plot_autoencoder_stats

--- a/7_Unsupervised/7.1-autoencoder.ipynb
+++ b/7_Unsupervised/7.1-autoencoder.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "    # live plotting of the trainig curves and representation\n",
     "    plot_autoencoder_stats(x=x.cpu(),\n",
-    "                           x_hat=x_hat,\n",
+    "                           x_hat=x_hat.cpu(),\n",
     "                           z=z,\n",
     "                           y=y,\n",
     "                           train_loss=train_loss,\n",
