--- a/8_Reinforcement/8.4_Q-Network.ipynb
+++ b/8_Reinforcement/8.4_Q-Network.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "> By Jonas Busk ([jbusk@dtu.dk](mailto:jbusk@dtu.dk))\n",
     "\n",
-    "Now we will solve the [FrozenLake](https://gym.openai.com/envs/FrozenLake-v0/) environment using on-policy neural Q-learning with epsilon-greedy action selection.\n",
+    "Now we will solve the [FrozenLake](https://gymnasium.farama.org/environments/toy_text/frozen_lake/) environment using on-policy neural Q-learning with epsilon-greedy action selection.\n",
     "\n",
     "In the FrozenLake problem the reinforcement learning agent must navigate a small grid world by moving up, down, left and right. \n",
     "The task is to move from start position (S) to the goal (G) whithout falling into a hole (H). \n",
@@ -51,6 +51,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install gymnasium\n",
+    "!pip install renderlab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +73,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
-    "import gym"
+    "import gymnasium as gym"
    ]
   },
   {
@@ -81,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "env = gym.make('FrozenLake-v0')"
+    "env = gym.make('FrozenLake-v1', render_mode=\"ansi\")"
    ]
   },
   {
@@ -91,8 +101,8 @@
    "outputs": [],
    "source": [
     "# show init state\n",
-    "s = env.reset()\n",
-    "env.render()"
+    "s, _ = env.reset()\n",
+    "print(env.render())"
    ]
   },
   {
@@ -169,14 +179,14 @@
     "    print('start training')\n",
     "    for i in range(num_episodes):\n",
     "        # init new episode\n",
-    "        s, ep_reward, ep_loss = env.reset(), 0, 0\n",
+    "        s, ep_reward, ep_loss = env.reset()[0], 0, 0\n",
     "        for j in range(episode_limit):\n",
     "            # 1. do foward pass of current state to compute Q-values for all actions\n",
     "            qnet.optimizer.zero_grad()\n",
     "            Q = qnet(torch.from_numpy(one_hot([s], n_inputs)).float())\n",
     "            # 2. select action with epsilon-greedy strategy\n",
     "            a = Q.argmax().item() if np.random.rand() > epsilon else env.action_space.sample()\n",
-    "            s1, r, done, _ = env.step(a)\n",
+    "            s1, r, done, _, _ = env.step(a)\n",
     "            # 3. do forward pass for the next state\n",
     "            with torch.no_grad():\n",
     "                Q1 = qnet(torch.from_numpy(one_hot([s1], n_inputs)).float())\n",
@@ -252,12 +262,12 @@
    },
    "outputs": [],
    "source": [
-    "s = env.reset()\n",
+    "s, _ = env.reset()\n",
     "env.render()\n",
     "for _ in range(100):\n",
     "    a = qnet(torch.from_numpy(one_hot([s], n_inputs)).float()).argmax().item()\n",
-    "    s, r, done, _ = env.step(a)\n",
-    "    env.render()\n",
+    "    s, r, done, _, _ = env.step(a)\n",
+    "    print(env.render())\n",
     "    if done: break"
    ]
   },
@@ -305,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
