In 8.4 and 8.5, chagned to gymnasium

--- a/8_Reinforcement/8.4_Q-Network.ipynb
+++ b/8_Reinforcement/8.4_Q-Network.ipynb
@@ -91,7 +91,8 @@
    },
    "outputs": [],
    "source": [
-    "env = gym.make('FrozenLake-v1', render_mode=\"ansi\")"
+    "# initialize environment\n",
+    "env = gym.make('FrozenLake-v1', map_name=\"4x4\", render_mode=\"ansi\")"
    ]
   },
   {
@@ -100,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show init state\n",
+    "# show initial state\n",
     "s, _ = env.reset()\n",
     "print(env.render())"
    ]
@@ -263,7 +264,7 @@
    "outputs": [],
    "source": [
     "s, _ = env.reset()\n",
-    "env.render()\n",
+    "print(env.render())\n",
     "for _ in range(100):\n",
     "    a = qnet(torch.from_numpy(one_hot([s], n_inputs)).float()).argmax().item()\n",
     "    s, r, done, _, _ = env.step(a)\n",
