Minor formatting corrections.

--- a/3_Feedforward_PyTorch/3.4-EXE-FFN-MNIST.ipynb
+++ b/3_Feedforward_PyTorch/3.4-EXE-FFN-MNIST.ipynb
@@ -367,20 +367,20 @@
     "# Assignments\n",
     "\n",
     "Try and add these modifications (might require some Googleing -- an important skill in deep learning):\n",
-    "- Kaiming He initialization instead of Xavier Glorot\n",
-    "- add an extra layer\n",
-    "- use the relu activation function\n",
-    "- add momentum to the optimizer\n",
-    "- use the ADAM optimizer instead of stochastic gradient descent\n",
+    "* a) Kaiming He initialization instead of Xavier Glorot\n",
+    "* b) add an extra layer\n",
+    "* c) use the ReLu activation function\n",
+    "* d) add momentum to the optimizer\n",
+    "* e) use the ADAM optimizer instead of stochastic gradient descent\n",
     "\n",
     "### Advanced - Regularization\n",
     "\n",
     "Regularization is VERY important in practice and is used practically every time.\n",
     "Many important results are completely dependent on clever use of regularization, and it is something you need to become familiar with if you want to work with deep learning.\n",
     "\n",
-    "- add L1 or L2 weight regularization (aka. weight decay) \n",
-    "- add dropout to the network (**note** the `net.train()` and `net.eval()` are already in the code)\n",
-    "- add batchnorm\n",
+    "* f) add L1 or L2 weight regularization (aka. weight decay) \n",
+    "* g) add dropout to the network (**note** the `net.train()` and `net.eval()` are already in the code)\n",
+    "* h) add batchnorm\n",
     "\n",
     "__Pointers on regularization hyperparameter:__\n",
     "1. L2 and [L1 regularization](http://pytorch.org/docs/master/nn.html#torch.nn.L1Loss) (weight decay of optimization functions) \n",
