--- a/3_Feedforward_PyTorch/3.4-EXE-FFN-MNIST.ipynb
+++ b/3_Feedforward_PyTorch/3.4-EXE-FFN-MNIST.ipynb
@@ -48,7 +48,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "## MNIST\n",
@@ -81,21 +84,27 @@
     "x_test = mnist_testset.data[:500].view(-1, 784).float()\n",
     "targets_test = mnist_testset.targets[:500]\n",
     "\n",
+    "# Normalize the inputs\n",
+    "x_train.div_(255)\n",
+    "x_valid.div_(255)\n",
+    "x_test.div_(255)\n",
+    "\n",
+    "\n",
+    "# Print dataset shapes\n",
     "print(\"Information on dataset\")\n",
     "print(\"x_train\", x_train.shape)\n",
     "print(\"targets_train\", targets_train.shape)\n",
     "print(\"x_valid\", x_valid.shape)\n",
     "print(\"targets_valid\", targets_valid.shape)\n",
     "print(\"x_test\", x_test.shape)\n",
-    "print(\"targets_test\", targets_test.shape)"
+    "print(\"targets_test\", targets_test.shape)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# plot a few MNIST examples\n",
@@ -202,12 +211,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Hyperparameters\n",
+    "# Hyperparameters\n",
     "num_classes = 10\n",
     "num_l1 = 512\n",
     "num_features = x_train.shape[1]\n",
     "\n",
-    "# define network\n",
+    "# Define network\n",
     "class Net(nn.Module):\n",
     "\n",
     "    def __init__(self, num_features, num_hidden, num_output):\n",
@@ -276,11 +285,6 @@
     "# we could have done this ourselves,\n",
     "# but we should be aware of sklearn and its tools\n",
     "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "# normalize the inputs\n",
-    "x_train.div_(255)\n",
-    "x_valid.div_(255)\n",
-    "x_test.div_(255)\n",
     "\n",
     "# setting hyperparameters and gettings epoch sizes\n",
     "batch_size = 100\n",
@@ -361,7 +365,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "# Assignments\n",
@@ -418,9 +425,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
