Fix to the DatasetSubsetWithTransform by Pawel Pieta

--- a/4_Convolutional/4.3-CNN-transfer.ipynb
+++ b/4_Convolutional/4.3-CNN-transfer.ipynb
@@ -166,16 +166,24 @@
     "    def __init__(self, dataset, indices, transform=None):\n",
     "        super().__init__(dataset, indices)\n",
     "        self.transform = transform\n",
-    "        \n",
-    "    def __getitem__(self, idx):\n",
-    "        x, y = super().__getitem__(idx)\n",
+    "\n",
+    "    def _transform_and_translate(self, x, y):\n",
     "        # Convert PIL image to RGB (some of them are greyscale)\n",
     "        x = x.convert('RGB')\n",
     "        if self.transform is not None:\n",
     "            x = self.transform(x)\n",
     "        y = translate_label(y, keep_classes)\n",
     "        return x, y\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self._transform_and_translate(*super().__getitem__(idx))\n",
     "    \n",
+    "    def __getitems__(self, indices):\n",
+    "        items = super().__getitems__(indices)\n",
+    "        for i in range(len(items)):\n",
+    "            items[i] = self._transform_and_translate(*items[i])\n",
+    "        return items\n",
+    "\n",
     "\n",
     "train_set = DatasetSubsetWithTransform(dataset, train_idx, train_transform)\n",
     "test_set = DatasetSubsetWithTransform(dataset, test_idx, test_transform)\n",
@@ -597,9 +605,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
