--- a/4_Convolutional/4.3-CNN-transfer.ipynb
+++ b/4_Convolutional/4.3-CNN-transfer.ipynb
@@ -75,7 +75,7 @@
     "    plt.imshow(img)\n",
     "    plt.gca().tick_params(axis=\"both\", which=\"both\", bottom=False, left=False, labelbottom=False, labelleft=False)\n",
     "    if title is not None:\n",
-    "        plt.title(title)\n"
+    "        plt.title(title)"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "train_set = DatasetSubsetWithTransform(dataset, train_idx, train_transform)\n",
     "test_set = DatasetSubsetWithTransform(dataset, test_idx, test_transform)\n",
     "train_loader = DataLoader(train_set, batch_size=batch_size, shuffle=True, drop_last=True)\n",
-    "test_loader = DataLoader(test_set, batch_size=batch_size, shuffle=False, drop_last=False)\n"
+    "test_loader = DataLoader(test_set, batch_size=batch_size, shuffle=False, drop_last=False)"
    ]
   },
   {
