--- a/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
+++ b/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
@@ -992,7 +992,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
